[FIX] fixed the dropdown menu color, now it's different between light and dark mode for better user experience, minor styling, positioning and graphic adjustments done

--- a/final_version_with_feats/css/style.css
+++ b/final_version_with_feats/css/style.css
@@ -461,6 +461,46 @@ body {
   color: #afaeae;
 }
 
+/* DROPDOWN CHAT */
+
+.dropdown-menu {
+  position: absolute;
+  max-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  top: 25px;
+  z-index: 1;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.positionSent {
+  right: 10px;
+}
+.positionReceived {
+  right: -80px;
+}
+
+.dropdown-menu button {
+  color: inherit;
+  padding: 7px 16px;
+  display: block;
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  font: inherit;
+  font-size: 13px;
+}
+.bgDarkMenu button:hover {
+  background-color: #1a1919ea;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.bgLightMenu button:hover {
+  background-color: #f0ededc7;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
 /* LIGHT/DARK MODE */
 .functions .fa-sun:hover {
   color: orange;
@@ -545,6 +585,15 @@ body {
 
 .bgLightWebApp {
   background-color: var(--webapp-bg);
+}
+.bgDarkMenu {
+  background-color: #252525;
+  color: rgb(255, 255, 255);
+}
+
+.bgLightMenu {
+  background-color: #ffffff;
+  color: black;
 }
 /* RESPONSIVE */
 
@@ -726,38 +775,4 @@ body {
   .container {
     max-width: 1320px;
   }
-}
-
-.dropdown-menu {
-  position: absolute;
-  background-color: #ebe9e9;
-  max-width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  top: 25px;
-  z-index: 1;
-  text-align: center;
-  border-radius: 10px;
-}
-
-.positionSent {
-  right: 10px;
-}
-.positionReceived {
-  right: -80px;
-}
-
-.dropdown-menu button {
-  color: black;
-  padding: 7px 16px;
-  display: block;
-  border: none;
-  background-color: transparent;
-  width: 100%;
-  font: inherit;
-  font-size: 13px;
-}
-.dropdown-menu button:hover {
-  background-color: #e0dbdbc7;
-  cursor: pointer;
-  border-radius: 10px;
 }
